Fix minor inconsistency in the Collection view.

Patch by Bhargav Mangipudi <bhargav.1191@gmail.com>.

BUG: 260973